css/main.css
:root {
  --color-white: white;
  --color-background: #f2ecff;
  --color-black: black;
  --color-blue: #0484c9;
  --color-green: green;
  --color-gray: #4a4a4a;
  --color-violet: #5d50f2;
  --color-purple: #bd2298;

  --form-color: rgb(0, 0, 0, 60%);

  --gradient-green: linear-gradient(93deg, #0f9381 -22.04%, #045349 152.46%);
  --gradient-blue: linear-gradient(101deg, #0039e2 -31.49%, #527af2 106.89%);

  --transition: all 300ms ease;

  --container-width-lg: 74%;
  --container-width-md: 88%;

  --btn-raduis: 8px;
  --form-raduis: 12px 12px 0 0;
}

/* ==== GENERAL  ==== */
* {
  margin: 0;
  padding: 0;
  outline: 0;
  border: 0;
  list-style: none;
  text-decoration: none;
  box-sizing: border-box;
  font-family: "Montserrat", sans-serif;
}
html {
  overflow-x: hidden;
}
body {
  line-height: 1.6;
  background: var(--color-background);
  overflow-x: hidden;
}

.container {
  width: var(--container-width-lg);
  max-width: 1800px;
  margin-inline: auto;
}
a {
  color: var(--color-black);
}

img {
  display: block;
  width: 100%;
}

form {
}
label {
  color: var(--form-color);
}
input {
  width: 100%;
  border: 1px solid var(--form-color);
  padding: 1em;
  font-size: 14px;
  border-radius: var(--btn-raduis);
}
.btn {
  display: inline-block;
  width: fit-content;
  border-radius: var(--btn-raduis);
  transition: var(--transition);
  border: 1px solid;
  text-align: center;
  cursor: pointer;
}

section {
  /* height: 100vh; */
}

/* ------ Header --------- */
header {
  width: 100vw;
  height: 6.5rem;
  top: 0;
  z-index: 100;
  background: var(--color-background);
}
header .container {
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.logo {
  /* margin-right: 10rem; */
  width: 5.5rem;
}

.showInMoblie {
  display: none;
}

#nav__items {
  display: flex;
  align-items: center;
  gap: 3rem;
  width: fit-content;
  /* transform: translateX(-50%); */
}
#nav__items li a {
  transition: var(--transition);
  color: var(--color-gray);
  position: relative;
}

#nav__items li a:after {
  content: "";
  width: 0%;
  height: 3px;
  left: 0;
  bottom: -5px;
  position: absolute;
  background-color: var(--color-blue);
  transition: var(--transition);
}

#nav__items li:hover a {
  color: var(--color-blue);
}
#nav__items li:hover a:after {
  width: 100%;
}

header .container .buttons {
}

header .container .buttons .btn {
  padding: 1em 2em;
  text-transform: uppercase;
}

header .container .buttons .sign-up {
  /* background-color: var(--color-blue); */
  background-color: var(--color-purple);
  border-color: var(--color-purple);
  color: var(--color-white);
  font-weight: bold;
}

header .container .buttons .sign-in {
  border: none;
  background-color: var(--color-background);
  font-weight: bold;
}
header .container .buttons .sign-in:hover {
  color: var(--color-blue);
}
#open__items-btn {
  display: none;
}
/* --- LANDING PAGE ---- */
.landingPage {
  /* margin-top: 14rem; */
  padding-top: 8rem;
  min-height: calc(100vh - 4.5rem);
}
.landingPage .container {
  display: grid;
  grid-template-columns: 37% 1fr;
  grid-template-rows: 24rem 3rem 7rem 3.25rem 20rem;
  column-gap: 3rem;
  justify-content: center;
  align-items: center;
  height: 100%;
}
.landingPage h1 {
  font-size: 3rem;
  color: var(--color-blue);
  margin-bottom: 1.5rem;
  text-transform: uppercase;
  position: relative;
}
.landingPage h1 span {
  color: var(--color-purple);
}
.landingPage p {
  font-size: 1rem;
  color: var(--color-gray);
  margin-bottom: 2rem;
}
.purpleGradient {
  border: none;
  background-color: var(--color-purple);
  color: var(--color-white);
  padding: 1em 4em;
  text-transform: capitalize;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.25),
    -1px 5px 5px 0px rgba(0, 0, 0, 0.21), -2px 11px 7px 0px rgba(0, 0, 0, 0.13),
    -3px 19px 8px 0px rgba(0, 0, 0, 0.04), -5px 30px 8px 0px rgba(0, 0, 0, 0);
  height: 3.25rem;
}
.landingPage .btn a {
  color: var(--color-white);
  font-weight: bold;
}
.landingPage .btn {
}
.landingPage__images {
  grid-column: 2;
  grid-row: 1 / 5;
  position: relative;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  */overflow: hidden;
}
.landingPage__images img {
  width: calc(100% - 8rem);
  object-fit: contain;
  /* width: fit-content; */
  /* height: calc(100% - 8rem); */
  position: absolute;
  top: 0;
  left: 0;
  transition: var(--transition);
  border: 1px solid var(--color-black);
  border-radius: var(--btn-raduis) var(--btn-raduis) 0 0;
}
.landingPage__images img[data-number="1"] {
  z-index: 1;
}
.landingPage__images img[data-number="2"] {
  z-index: 2;
  top: 4rem;
  left: 4rem;
}
.landingPage__images img[data-number="3"] {
  z-index: 3;
  top: 8em;
  left: 8rem;
}

.certificate {
  min-height: calc(100vh - 4.5rem);
  padding-top: 3rem;
  position: relative;
}
.certificate::after {
  content: "";
  width: 5.5rem;
  height: 5.5rem;
  background-color: var(--color-purple);
  position: absolute;
  border-radius: 8px;
  top: 8rem;
  left: 0;
}
.certificate::before {
  content: "";
  width: 5.5rem;
  height: 5.5rem;
  background-color: var(--color-purple);
  position: absolute;
  border-radius: 8px;
  top: 13.5rem;
  left: 5.5rem;
}
.certificate .container {
  border: 1px solid var(--color-black);
  border-radius: var(--form-raduis);
  text-align: center;
  padding: 3rem 0;
  margin-bottom: 2rem;
}
.h2title {
  margin: 0 0 2rem;
  color: var(--color-violet);
  text-transform: uppercase;
}
.ptitle {
  font-size: 1.25rem;
  width: 55%;
  color: var(--color-gray);
  /* margin-inline: auto; */
  margin: 0 auto 4rem auto;
}
/* .certificate h2 {
  margin: 0 0 2rem;
  color: var(--color-violet);
  text-transform: uppercase;
}
/* ... */

